Complete revamp of SOAP connection, update for main